# event-driven-architectures-apache-kafka

./: .gitignore  heatmap.py  upper_partitions_limit.ods
docker/: docker-compose.connect.yml  docker-compose.monitoring.yml  docker-compose.yml
docker/assets/datagen/: endpoint-code-updates-config.json  endpoint-code-updates-schema.json
docker/assets/jmx-exporter/: kafka_broker.yml
docker/assets/prometheus/prometheus-config/: prometheus.yml
docker/examples/: match-keyed-producer-messages.txt  producer-messages.txt  tournament-keyed-producer-messages.txt
docker/scripts/: aliases.sh  start-endpoint-code-updates.sh  stop-endpoint-code-updates.sh
rust-kafka-producer/: Cargo.toml
rust-kafka-producer/src/: config.rs  main.rs  propagator.rs  tracer.rs
simple-clients/java/: pom.xml
simple-clients/java/src/main/java/kafka-playground/: Consumer.java  Producer.java
simple-clients/node/rate_limited_consumer/: package-lock.json  package.json
simple-clients/node/rate_limited_consumer/src/: main.ts
usecase/node_kafka_socket.io_bridge/: .env.default  package-lock.json  package.json
usecase/node_kafka_socket.io_bridge/src/: main.js  main.ts
