[package]
name    = "kafka-producer"
version = "0.1.0"
edition = "2018"
build   = "build.rs"

[dependencies]
futures = "0.3.18"
clap    = "2.33.0"
structopt = "0.3.25"
tonic = "0.5.0"
opentelemetry-semantic-conventions = "0.8.0" 
tracing = "0.1.29"
tracing-opentelemetry = "0.16.0"
tracing-subscriber = "0.3.3"

[dependencies.tracing-futures]
version = "0.2.5"
features = ["tokio"]

[dependencies.rdkafka]
version     = "~0.28"
features    = ["ssl", "sasl"]

[dependencies.tokio]
version = "1.14.0"
features = ["full"]

[dependencies.opentelemetry] 
version = "0.16.0" 
features = ["rt-tokio"]

[dependencies.opentelemetry-otlp]
version = "0.9.0"
features = ["tonic", "tls", "tls-roots"]

[[bin]]
name = "kafka-producer"
path = "src/main.rs"
